--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "music-xray",
   "version": "0.1.0",
+  "homepage": "https://e7mac.github.io/music-xray/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
